@@ -2,7 +2,8 @@
 <cvar name="RPATH">
 <summary>
 A list of paths to search for shared libraries when running programs.
-Currently only used in the GNU linker (gnulink) and IRIX linker (sgilink).
+Currently only used in the GNU (gnulink),
+IRIX (sgilink) and Sun (sunlink) linkers.
 Ignored on platforms and toolchains that don't support it.
 Note that the paths added to RPATH
 are not transformed by
